# XQR

./: AUTHORS  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 01_basic_encode.py  02_basic_decode.py  03_custom_colors.py  04_artistic_qr.py  05_animated_qr.py  06_terminal_output.py  07_base64_svg.py  08_class_api.py  09_chinese_text.py  10_batch_encode.py  11_cli_usage.sh  12_barcode.py  app.py  app_v2.py
xqr/: __init__.py  __main__.py  _encoder.py  _version.py  artistic.py  barcode.py  cli.py  core.py
xqr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
